--- a/ticket.html
+++ b/ticket.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/02_ticket.css">
 
     <script src="assets/js/main.js" defer></script>
-    <script src="assets/js/02_script.js" defer></script>
+    <script src="assets/js/ticket.js" defer></script>
 
     <title>Frontend Mentor | Conference ticket generator</title>
 </head>
@@ -23,7 +23,7 @@
     <img class="header__image" src="assets/images/logo-full.svg" alt="logo Coding Conf">
 
     <div class="header__subsection">
-        <h1 class="header__subsection__title">Congrats,<span class="first-name">Jonatan Kristof</span>! Your ticket is ready.</h1>
+        <h1 class="header__subsection__title">Congrats, <span class="first-name">jonatan kristof</span>! Your ticket is ready.</h1>
         <p class="header__subsection__paragraph">We've emailed your ticket to <span class="email">jonatankristof@gmail.com</span> and will
             send updates in the run-up to the event.</p>
     </div>
@@ -36,8 +36,8 @@
     </div>
 
     <div class="ticket__infos">
-        <img class="ticket__infos__image" src="assets/images/image-avatar.jpg" alt="picture uploaded">
-        <h2 class="ticket__infos__name">Jonatan Kristof </h2>
+        <img class="ticket__infos__image" src="" alt="picture uploaded">
+        <h2 class="ticket__infos__name">Jonatan Kristof</h2>
         <span class="ticket__infos__github">@jonatankristof1011</span>
     </div>
 
